dropdown: fix z-index bug, renaming for clarity

--- a/src/assets/css/menu.scss
+++ b/src/assets/css/menu.scss
@@ -2,7 +2,6 @@
   @apply relative;
   @apply inline-block;
   @apply text-left;
-  @apply z-10;
   @apply font-normal;
 
   .menu__toggle {
@@ -16,13 +15,10 @@
     @apply w-5;
   }
 
-  .menu__section {
-    @apply py-1;
-  }
-
-  .menu__items {
+  .menu__content {
     @apply origin-top-right;
     @apply absolute;
+    @apply z-10;
     @apply right-0;
     @apply mt-2;
     @apply w-56;
@@ -32,11 +28,15 @@
     @apply ring-1 ring-black ring-opacity-5;
     @apply divide-y divide-gray-100;
 
-    &.menu__items--right {
+    &.menu__content--right {
       @apply origin-top-left;
       @apply right-auto;
       @apply left-0;
     }
+  }
+
+  .menu__section {
+    @apply py-1;
   }
 
   .menu__item {
